libcm4all-http (1.2.5) unstable; urgency=low

  * method: support PATCH (RFC 5789)

 --   

libcm4all-http (1.2.4) unstable; urgency=low

  * header: optimize http_header_is_hop_by_hop()

 -- Max Kellermann <mk@cm4all.com>  Tue, 03 Feb 2015 14:36:10 -0000

libcm4all-http (1.2.3) unstable; urgency=low

  * status: support "101 Switching Protocols" (RFC 6455)

 -- Max Kellermann <mk@cm4all.com>  Tue, 29 Jul 2014 20:33:14 -0000

libcm4all-http (1.2.2) unstable; urgency=low

  * status: C++ compatibility

 -- Max Kellermann <mk@cm4all.com>  Fri, 27 Dec 2013 16:38:48 -0000

libcm4all-http (1.2.1) unstable; urgency=low

  * status: cast enum to unsigned before arithmetic
  * header, http: C++ compatibility

 -- Max Kellermann <mk@cm4all.com>  Fri, 16 Aug 2013 16:12:32 -0000

libcm4all-http (1.2) unstable; urgency=low

  * status: implement RFC 2324
  * status: implement RFC 6585 (Additional HTTP Status Codes)
  * status: add WebDAV status codes

 -- Max Kellermann <mk@cm4all.com>  Thu, 09 Aug 2012 10:06:49 -0000

libcm4all-http (1.1) unstable; urgency=low

  * method: add missing HTTP methods OPTIONS, TRACE
  * method: add WebDAV methods

 -- Max Kellermann <mk@cm4all.com>  Fri, 03 Aug 2012 11:33:02 -0000

libcm4all-http (1.0) unstable; urgency=low

  * initial release

 -- Max Kellermann <mk@cm4all.com>  Mon, 08 Nov 2010 22:14:20 +0100