@@ -1,6 +1,7 @@
 libcm4all-http (1.2.5) unstable; urgency=low
 
   * method: support PATCH (RFC 5789)
+  * status: "426 Upgrade Required" (RFC 7231)
 
  --   
 
